<resources>
    <string name="app_name">NFTMobile</string>
    <string name="Password">Password</string>
    <string name="RepPassword">Repeat Password</string>
    <string name="ForgPass">Forgot password?</string>
    <string name="Register">REGISTER NOW</string>
    <string name="Login">LOGIN</string>
    <string name="Nickname">Nickname</string>
    <string name="Email">Email</string>
    <string name="LogOut">Log out</string>
    <string name="ResetCode">Send verification code</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="My_Account">"My Account"</string>
    <string name="Settings">"Settings"</string>
    <string name="Main_Page">"Main Page"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>