<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">
    <EditText
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/loginmail"
            android:background="@drawable/rounded_corner"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="184dp" app:layout_constraintEnd_toEndOf="parent" android:hint="@string/Email"
            android:textColorHint="#1976D2" app:layout_constraintHorizontal_bias="0.508"
    />
    <EditText
            android:layout_width="350dp"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginpass"
            app:layout_constraintTop_toBottomOf="@+id/loginmail"
            app:layout_constraintEnd_toEndOf="@+id/loginmail"
            app:layout_constraintStart_toStartOf="@+id/loginmail" android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner"
            app:layout_constraintHorizontal_bias="0.0" android:hint="@string/Password"
            android:textColorHint="#1976D2"/>

    <Button
            android:text="@string/Login"
            android:onClick ="loginnow"
            android:layout_width="350dp"

            android:layout_height="60dp" android:id="@+id/btnlogin"
            app:layout_constraintTop_toBottomOf="@+id/loginpass"
            android:layout_marginTop="56dp" app:layout_constraintEnd_toEndOf="@+id/loginpass"
            app:layout_constraintStart_toStartOf="@+id/loginpass" app:backgroundTint="#2196F3"
            app:layout_constraintHorizontal_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>