<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:background="@color/white"
                                                   android:orientation="vertical"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".MainActivity"
>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <RelativeLayout

                android:layout_weight="0.6"
                android:background="@drawable/login_background"
                android:layout_width="match_parent" android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0">

        </RelativeLayout>
        <RelativeLayout
                android:layout_weight="0.4"
                android:background="@color/white"
                android:layout_width="match_parent" android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0">

        </RelativeLayout>
    </LinearLayout>


    <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.3" android:id="@+id/cardView">

        <LinearLayout
                android:background="@color/white"
                android:orientation="vertical"

                android:layout_gravity="center_horizontal"
                android:padding="25dp"
                android:layout_width="match_parent" android:layout_height="wrap_content">

            <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:textSize="30dp"
                      android:textColor="@color/blue"
                      android:textStyle="bold"

                      android:textAlignment="center"
                      android:text="Login"/>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginTop="20dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/Emaillayout"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:hint="@string/Email">

                <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/EmailET"
                        android:textColor="@color/black"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    app:boxCornerRadiusTopEnd="30dp"
                    app:boxCornerRadiusTopStart="30dp"
                    app:boxCornerRadiusBottomEnd="30dp"
                    app:boxCornerRadiusBottomStart="30dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/Passwordlayout"
                    android:layout_width="match_parent"
                    android:layout_height="85dp"
                    android:hint="@string/Password"


            >

                <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/PasswordET"
                        android:textColor="@color/black"
                        android:inputType="textPassword"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    app:cornerRadius="30dp"
                    android:textColor="@color/white"
                    android:text="@string/Login"


                    android:layout_width="match_parent"

                    android:textSize="17sp"

                    android:layout_height="60dp" android:id="@+id/btnlogin"
                    app:backgroundTint="#2196F3"


                    style="@style/Widget.Material3.Button"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>
    <TextView
            android:text="Forgot password?"
            android:textColor="@color/blue"
            android:clickable="true"
            android:onClick="forgotPassTV"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/cardView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:id="@+id/textView"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.13"
            tools:ignore="TouchTargetSizeCheck">

    </TextView>
    <LinearLayout
            android:gravity="center"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout3" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.13">

        <TextView android:layout_width="wrap_content"
                  android:textColor="@color/darkergGrey"
                  android:layout_height="wrap_content" android:text="Not registered yet?"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:layout_marginLeft="5dp"
                  android:text="Sign up now!"
                  android:clickable="true"
                  android:onClick="tvClicked"
                  android:textColor="@color/blue"
                  tools:ignore="TouchTargetSizeCheck"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
